--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.5",
     "tailwindcss": "^3.4.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
