--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "astro": "^4.11.5",
+    "lucide": "^0.445.0",
+    "lucide-static": "^0.445.0",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
